syntax = "proto3";

option go_package = ".;gcloud_grpc_boilerplate";

service Messages {
  rpc Create(CreateRequest) returns (Message);
  rpc GetByID(GetByIDRequest) returns (Message);
}

message Message {
  string id = 1;
  string text = 2;
}

message CreateRequest {
  string text = 1;
}

message GetByIDRequest {
  string id = 1;
}
